[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://Characters/Images/Dialog/dialog-box-more-2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Images/Dialog/dialog-box-more-3.png" type="Texture" id=3]
[ext_resource path="res://Characters/Images/Dialog/dialogue-box.png" type="Texture" id=4]
[ext_resource path="res://Characters/Images/Dialog/dialog-box-more-1.png" type="Texture" id=5]
[ext_resource path="res://Characters/TrackingArea.gd" type="Script" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 6
fps = 5.0
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 3 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 2 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 5 )
frame_5/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.5, 55.5 )

[node name="NPC" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="d" type="CanvasLayer" parent="."]

[node name="Conversation" type="Node2D" parent="d"]
visible = false
material = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="d/Conversation"]
position = Vector2( 502, 135 )
texture = ExtResource( 4 )

[node name="SpeakerName" type="Label" parent="d/Conversation"]
margin_left = 170.0
margin_top = 35.0
margin_right = 438.0
margin_bottom = 49.0
text = "Name"

[node name="SpeakerText" type="Label" parent="d/Conversation"]
margin_left = 36.0
margin_top = 93.0
margin_right = 969.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Blah blah blah"
autowrap = true

[node name="PlayerPrompt" type="Label" parent="d/Conversation"]
margin_left = 29.0
margin_top = 199.0
margin_right = 81.0
margin_bottom = 213.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You say:"

[node name="PlayerText" type="LineEdit" parent="d/Conversation"]
margin_left = 107.0
margin_top = 191.0
margin_right = 930.0
margin_bottom = 215.0
caret_blink = true
caret_blink_speed = 0.5

[node name="SayAPartTimer" type="Timer" parent="d/Conversation"]

[node name="More" type="Button" parent="d/Conversation"]
margin_left = 894.0
margin_top = 185.0
margin_right = 932.0
margin_bottom = 227.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Sprite2" type="Sprite" parent="d/Conversation/More"]
position = Vector2( 23.25, 21 )
scale = Vector2( 0.841463, 0.566667 )
texture = SubResource( 2 )

[node name="TrackingArea" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackingArea"]
shape = SubResource( 3 )

[connection signal="text_entered" from="d/Conversation/PlayerText" to="." method="player_said"]
